Python syntax testini Java 8 uyumlu yap